Fix: Resolve asset linking and path errors
- Corrected broken background image paths within agency.css.
- Fixed broken internal links in the news section.

--- a/less/agency.less
+++ b/less/agency.less
@@ -1,3 +1,5 @@
+---
+---
 @import "variables.less";
 @import "mixins.less";
 
@@ -162,7 +164,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	background-image: url('../img/volume_rendering.png');
+	background-image: url("{{ '/img/volume_rendering.webp' | relative_url }}");
 	background-repeat: none;
 	background-attachment: scroll;
 	background-position: center center;
